# VNS-EVRP-2020

./: CMakeLists.txt  README.md
data/: E-n101-k8.evrp  E-n22-k4.evrp  E-n23-k3.evrp  E-n30-k3.evrp  E-n33-k4.evrp  E-n51-k5.evrp  E-n76-k7.evrp  X-n1001-k43.evrp  X-n143-k7.evrp  X-n214-k11.evrp  X-n351-k40.evrp  X-n459-k26.evrp  X-n573-k30.evrp  X-n685-k75.evrp  X-n749-k98.evrp  X-n819-k171.evrp  X-n916-k207.evrp
src/: EVRP.cpp  EVRP.hpp  LS_operators.cpp  LS_operators.hpp  constructions.cpp  constructions.hpp  floydWarshall.cpp  floydWarshall.hpp  heuristics.cpp  heuristics.hpp  main.cpp  perturbations.cpp  perturbations.hpp  stats.cpp  stats.hpp  utils.cpp  utils.hpp
stats/: stats.E-n101-k8.evrp.txt  stats.E-n22-k4.evrp.txt  stats.E-n23-k3.evrp.txt  stats.E-n30-k3.evrp.txt  stats.E-n33-k4.evrp.txt  stats.E-n51-k5.evrp.txt  stats.E-n76-k7.evrp.txt  stats.X-n1001-k43.evrp.txt  stats.X-n143-k7.evrp.txt  stats.X-n214-k11.evrp.txt  stats.X-n351-k40.evrp.txt  stats.X-n459-k26.evrp.txt  stats.X-n573-k30.evrp.txt  stats.X-n685-k75.evrp.txt  stats.X-n749-k98.evrp.txt  stats.X-n819-k171.evrp.txt  stats.X-n916-k207.evrp.txt
